--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5" />
     <title>Light Food Way Parque Brasília | Marmitas Saudáveis em Campinas</title>
-    <meta name="description" content="Marmitas ultracongeladas saudáveis, sem glúten e sem lactose. Entrega em Campinas. Peça pelo InstaDelivery ou iFood." />
+    <meta name="description" content="Marmitas ultracongeladas saudáveis, sem glúten e sem lactose. Entrega em Campinas. Peça pelo InstaDelivery, 99 Food ou iFood." />
     <meta property="og:title" content="Light Food Way Parque Brasília" />
     <meta property="og:description" content="Alimentação saudável com praticidade. Marmitas ultracongeladas sem glúten e sem lactose." />
     <meta property="og:type" content="website" />
